k8s/tezblock/babylonnet/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tezblock-babylonnet-frontend
  namespace: tezblock
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - tezblock-babylonnet.prod.gke.papers.tech
        - babylonnet.tezblock.io
      secretName: tezblock-babylonnet-prod-tls  
  rules:
    - host: tezblock-babylonnet.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tezblock-babylonnet-frontend
              servicePort: 80
    - host: babylonnet.tezblock.io
      http:
        paths:
          - backend:
              serviceName: tezblock-babylonnet-frontend
              servicePort: 80
